google sign in completed

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GITHUB_ID='ee6c74ff063dce3edef3'
 GITHUB_SECRET='ee5b4c5be08f29fd1a7e1e5b00d3b3b31275735b'
+GOOGLE_ID='30350487294-ads0o5gd27o98555u6l0cam24obashsu.apps.googleusercontent.com'
+GOOGLE_SECRET='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'
 NEXTAUTH_SECRET='abc'
